# rapidwebs-sysstable

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: lint.yml  pre-commit.yml  publish.yml  release.yml  smoke-test.yml  tests.yml
docs/: SESSION_STATE.md  deployment.md  plan-critical-memory-resolution.md  plugin-install.md  spec-critical-memory-resolution.md  spec.md  sysstable.service
docs/audits/: comprehensive-audit-2026-07-02.md  final-v0.2.0-audit.md  phase2-audit-2026-07-03.md
hermes-plugin/: rapidwebs_sysstable
hermes-plugin/rapidwebs-sysstable/: __init__.py  install.sh  plugin.yaml
src/ast_tools/config/: loader.py  tokens_schema.py  validate.py
src/sysstable/: __init__.py  __main__.py  cli.py  collector.py  config.py  daemon.py  database.py  events.py  pro_balance.py  process_watch.py  resolver.py  rules_engine.py  socketd.py  state_machine.py  systemd_notify.py  thresholds.py  utils.py
tests/: test_core.py  test_core_logic.py  test_integration.py  test_process_watch.py  test_resolver.py  test_stability.py  test_state_machine.py
