[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapidwebs-sysstable"
version = "0.1.0"
description = "System stability monitor with Hermes integration — daemon, CLI, plugin"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RapidWebs Enterprise", email = "dev@rapidwebs.com"},
]
maintainers = [
    {name = "Lucien (RapidWebs)", email = "lucien@rapidwebs.com"},
]
keywords = [
    "system", "monitoring", "hermes", "plugin", "stability",
    "daemon", "thresholds", "psutil", "devops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/stephanos8926-lgtm/rapidwebs-sysstable"

[project.scripts]
sysstable = "sysstable.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0",
    "build>=1.0",
    "twine>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sysstable"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.per-file-ignores]
"hermes-plugin/**" = ["N999"]  # Plugin dir names use Hermes convention (dashes)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
